home page change

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 										<div class="heading heading--primary"><span class="heading__pre-title">Donation</span>
 											<h2 class="heading__title color--white"><span>Help us more</span><br/> <span>protect animals</span> </h2>
 										</div>
-										<p>Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish.</p><a class="info-box__link" href="volunteer.html">Donate!</a>
+										<p>Tigers once roamed the entire continent of Asia, but with human expansion they have lost over 96% of their original range. They now survive in small, isolated pockets of forest, where they are vulnerable to poaching and inbreeding. Allof the tiger subspecies have been have been classified as either by the Endangered or Critically Endangered by the IUCN (International Union for Conservation of Nature).  Poaching, habitat loss and habitat degradation are causing global tiger populations to plummet.  Today, less than 4,000 tigers remain worldwide.</p><a class="info-box__link" href="volunteer.html">Donate!</a>
 									</div>
 								</div>
 							</div>
@@ -638,10 +638,11 @@
 								<div class="nearest-item">
 									<div class="row align-items-center">
 										<div class="col-md-4">
-											<div class="nearest-item__img"><img class="img--bg" src="img/nearest_1.jpg" alt="img"/></div>
+											<div class="nearest-item__img"><img class="img--bg" src="/img/2016_03_29_1814_1459252095._large.jpg" alt="img"/></div>
 										</div>
 										<div class="col-md-5">
-											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Owls Show in Land</a><span class="nearest-item__category">Birds</span></div>
+											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Electronic
+												Library</a><span class="nearest-item__category"> </span></div>
 										</div>
 										<div class="col-md-3">
 											<div class="nearest-item__date"><span>11 - 10 PM</span><span>10 November</span></div>
@@ -651,10 +652,10 @@
 								<div class="nearest-item">
 									<div class="row align-items-center">
 										<div class="col-md-4">
-											<div class="nearest-item__img"><img class="img--bg" src="img/nearest_2.jpg" alt="img"/></div>
+											<div class="nearest-item__img"><img class="img--bg" src="img/child-GIRRAFF.jpg" alt="img"/></div>
 										</div>
 										<div class="col-md-5">
-											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Tiger Walking on the Street</a><span class="nearest-item__category">Cats</span></div>
+											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Children Workshop</a><span class="nearest-item__category"> </span></div>
 										</div>
 										<div class="col-md-3">
 											<div class="nearest-item__date"><span>13 - 15 PM</span><span>10 November</span></div>
@@ -664,10 +665,10 @@
 								<div class="nearest-item">
 									<div class="row align-items-center">
 										<div class="col-md-4">
-											<div class="nearest-item__img"><img class="img--bg" src="img/nearest_3.jpg" alt="img"/></div>
+											<div class="nearest-item__img"><img class="img--bg" src="IMG/MAGIC.jpg" alt="img"/></div>
 										</div>
 										<div class="col-md-5">
-											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Parrots Photosession</a><span class="nearest-item__category">Parrots</span></div>
+											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Magic Shows</a><span class="nearest-item__category"> </span></div>
 										</div>
 										<div class="col-md-3">
 											<div class="nearest-item__date"><span>15 - 18 PM</span><span>10 November</span></div>
@@ -680,7 +681,7 @@
 					<div class="main-event"><img class="img--bg" src="img/main-event.jpg" alt="img"/>
 						<div class="main-event__inner">
 							<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">Main Event</span>
-								<h2 class="heading__title"><span>MOnkeys day</span><br/> <span>in our Zoo</span></h2>
+								<h2 class="heading__title"><span>Cow Appreciation Day</span><br/> <span>in our Zoo</span></h2>
 							</div>
 							<p>Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish.</p>
 							<p>Thornyhead salamanderfish European minnow zebra trout gray mullet climbing perch ghost carp pelican gulper Blenny barfish false cat shark halibut Dolly Varden trout lake trout. Pelagic cod swordtail</p>
