home page change by Nuraiaa

--- a/index.html
+++ b/index.html
@@ -554,79 +554,7 @@
 					</div>
 				</section>
 				<!-- gallery end-->
-				<!-- front services start-->
-				<section class="section front-services"><img class="section__bg t0 l0" src="img/front-services__bg.jpg" alt="bg"/>
-					<div class="container">
-						<div class="row bottom-70">
-							<div class="col-md-5 bottom-30">
-								<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">Services</span>
-									<h2 class="heading__title"><span>Special Services</span><br/> <span>for our guests</span></h2>
-								</div><a class="button button--primary d-none d-md-inline-block" href="#">All Services</a>
-							</div>
-							<div class="col-md-7">
-								<div class="app-block">
-									<div class="app-block__icon">
-										<svg class="icon">
-											<use xlink:href="#smartphone"></use>
-										</svg>
-									</div>
-									<h6 class="app-block__title">Mobile App of Animal World Zoo</h6>
-									<p class="no-margin-bottom">Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish. Fangtooth yellowtail banded killifish seamoth triplefin blenny desert pupfish crocodile shark catfish cutlassfish</p>
-								</div>
-							</div>
-						</div>
-						<div class="row offset-margin">
-							<div class="col-sm-6 col-lg-3">
-								<div class="icon-item">
-									<div class="icon-item__icon">
-										<svg class="icon">
-											<use xlink:href="#photo-camera"></use>
-										</svg>
-									</div>
-									<h6 class="icon-item__title">Photos with Animals</h6>
-									<p>Rudderfish long-finned pike razorfish menhaden paradise fish, barramundi oceanic flyingfish blenny desert.</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-lg-3">
-								<div class="icon-item">
-									<div class="icon-item__icon">
-										<svg class="icon">
-											<use xlink:href="#cutlery"></use>
-										</svg>
-									</div>
-									<h6 class="icon-item__title">Restaraunts & Fast Foods</h6>
-									<p>Fangtooth yellowtail banded killifish seamoth triplefin blenny desert pupfish crocodile shark catfish</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-lg-3">
-								<div class="icon-item">
-									<div class="icon-item__icon">
-										<svg class="icon">
-											<use xlink:href="#wifi"></use>
-										</svg>
-									</div>
-									<h6 class="icon-item__title">Free Wi-Fi with Hi Speed</h6>
-									<p>Lake trout, squeaker, spiny eel bala shark rice eel rohu medaka. Rudd convict blenny ray redside Rabbitfish;</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-lg-3">
-								<div class="icon-item">
-									<div class="icon-item__icon">
-										<svg class="icon">
-											<use xlink:href="#trophy"></use>
-										</svg>
-									</div>
-									<h6 class="icon-item__title">Many Competitions</h6>
-									<p>Desea Cat shark worm eel lenok, beachsalmon: ronquil requiem shark loach goby sucker Black scalyfin rock</p>
-								</div>
-							</div>
-						</div>
-						<div class="row top-50 d-flex d-md-none">
-							<div class="col-12 text-center"><a class="button button--primary" href="#">All Services</a></div>
-						</div>
-					</div>
-				</section>
-				<!-- front services end-->
+				 
 				<!-- front events start-->
 				<section class="section front-events background--gray">
 					<div class="container">
@@ -678,14 +606,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="main-event"><img class="img--bg" src="img/main-event.jpg" alt="img"/>
+					<div class="main-event"><img class="img--bg" src="/img/cow-1715829__480.jpg" alt="img"/>
 						<div class="main-event__inner">
 							<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">Main Event</span>
 								<h2 class="heading__title"><span>Cow Appreciation Day</span><br/> <span>in our Zoo</span></h2>
 							</div>
-							<p>Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish.</p>
-							<p>Thornyhead salamanderfish European minnow zebra trout gray mullet climbing perch ghost carp pelican gulper Blenny barfish false cat shark halibut Dolly Varden trout lake trout. Pelagic cod swordtail</p>
-							<div class="main-event__date"><span>14 - 18 PM</span><span>10 November</span></div><a class="button main-event__button button--primary" href="#">Discover</a>
+							<p>Cow Appreciation Day takes place on July 14, 2023. It is a day to remind us how integral cows are to our daily life. In some regions, such as parts of India, cows have significant religious meaning. Cows are sometimes considered as the oldest form of wealth. This text has been taken from www.cute-calendar.com</p>
+							<div class="main-event__date"><span>14 - 18 PM</span><span>14 July</span></div><a class="button main-event__button button--primary" href="#">Discover</a>
 						</div>
 					</div>
 				</section>
