--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Animal World HTML Template</title>
 		<!-- styles-->
 		<link rel="stylesheet" href="css/styles.min.css"/>
+		<link rel="stylesheet" href="css/style.css">
 		<!-- web-font loader-->
 		<script>
 			WebFontConfig = {
@@ -184,14 +185,14 @@
 			</div>
 			<!-- menu dropdown end-->
 			<!-- header start-->
-			<header class="header header-common">
+			<header class="header header-common ">
 				<div class="header__top">
 					<div class="row align-items-center">
 						<div class="col-6 col-lg-4"><a class="logo" href="index.html"><img class="logo__img" src="img/logo_zoo_black.png" alt="logo"/></a></div>
 						<div class="col-6 col-lg-8 d-flex justify-content-end">
 							<!-- main menu start-->
 							<ul class="main-menu">
-								<li class="main-menu__item main-menu__item--has-child main-menu__item--active"><a class="main-menu__link" href="javascript:void(0);"><span>Home</span></a>
+								<li class="main-menu__item main-menu__item--active"><a class="main-menu__link" href="javascript:void(0);"><span>Home</span></a>
 									<!-- sub menu start-->
 									<ul class="main-menu__sub-list">
 										<li class="item--active"><a href="index.html"><span>Home Zoo</span></a></li>
@@ -203,7 +204,7 @@
 									</ul>
 									<!-- sub menu end-->
 								</li>
-								<li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link" href="javascript:void(0);"><span>Pages</span></a>
+								<li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link" href="javascript:void(0);"><span>Animals</span></a>
 									<!-- sub menu start-->
 									<ul class="main-menu__sub-list sub-list--style-2">
 										<li><a href="about.html"><span>About</span></a></li>
@@ -231,8 +232,9 @@
 									</ul>
 									<!-- sub menu end-->
 								</li>
-								<li class="main-menu__item"><a class="main-menu__link" href="blog.html"><span>Blog</span></a></li>
-								<li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link" href="javascript:void(0);"><span>Shop</span></a>
+								<li class="main-menu__item"><a class="main-menu__link" href="blog.html"><span>Services</span></a></li>
+								
+								<li class="main-menu__item "><a class="main-menu__link" href="javascript:void(0);"><span>Finances</span></a>
 									<!-- sub menu start-->
 									<ul class="main-menu__sub-list">
 										<li><a href="shop-catalog.html"><span>Shop Catalog</span></a></li>
@@ -243,10 +245,11 @@
 									</ul>
 									<!-- sub menu end-->
 								</li>
-								<li class="main-menu__item"><a class="main-menu__link" href="contacts.html"><span>Contacts</span></a></li>
-								<li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link" href="javascript:void(0);"><span>Elements</span></a>
+
+								<li class="main-menu__item"><a class="main-menu__link" href="contacts.html"><span>Contact Us</span></a></li>
+								<!-- <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link" href="javascript:void(0);"><span>Elements</span></a> -->
 									<!-- sub menu start-->
-									<ul class="main-menu__sub-list sub-list--style-2">
+									<!-- <ul class="main-menu__sub-list sub-list--style-2">
 										<li><a href="accordion.html"><span>Accordion</span></a></li>
 										<li><a href="charts.html"><span>Charts</span></a></li>
 										<li><a href="alerts.html"><span>Alerts</span></a></li>
@@ -261,11 +264,11 @@
 										<li><a href="icon-list.html"><span>Icon List</span></a></li>
 										<li><a href="pricing-tables.html"><span>Pricing Tables</span></a></li>
 										<li><a href="testimonials.html"><span>Testimonials</span></a></li>
-									</ul>
+									</ul> -->
 									<!-- sub menu end-->
-								</li>
+								<!-- </li> -->
 							</ul>
-							<!-- main menu end--><a class="header__button" href="#">Tickets</a>
+							<!-- main menu end--><a class="header__button" href="#">Log In</a>
 							<!-- menu-trigger start-->
 							<div class="hamburger">
 								<div class="hamburger-box">
@@ -276,7 +279,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="header__lower">
+				<!-- <div class="header__lower">
 					<div class="row">
 						<div class="col-auto d-flex align-items-center">
 							<ul class="lower-menu">
@@ -286,9 +289,9 @@
 								<li class="lower-menu__item"><a class="lower-menu__link" href="#">Events</a></li>
 								<li class="lower-menu__item"><a class="lower-menu__link" href="#">Donate</a></li>
 								<li class="lower-menu__item"><a class="lower-menu__link" href="#">Foundation</a></li>
-							</ul>
+							</ul> -->
 							<!-- lang select start-->
-							<ul class="lang-select">
+							<!-- <ul class="lang-select">
 								<li class="lang-select__item lang-select__item--active"><span>English</span>
 									<ul class="lang-select__sub-list">
 										<li><a href="#">French</a></li>
@@ -297,9 +300,9 @@
 										<li><a href="#">Russian</a></li>
 									</ul>
 								</li>
-							</ul>
+							</ul> -->
 							<!-- lang select end-->
-							<ul class="header__socials">
+							<!-- <ul class="header__socials">
 								<li><a class="item--facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a class="item--twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 								<li><a class="item--youtube" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
@@ -307,7 +310,7 @@
 							</ul>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</header>
 			<!-- header end-->
 			<main class="main">
