--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<header class="header header-common ">
 				<div class="header__top">
 					<div class="row align-items-center">
-						<div class="col-6 col-lg-4"><a class="logo" href="index.html"><img class="logo__img" src="img/logo_zoo_black.png" alt="logo"/></a></div>
+						<div class="col-6 col-lg-4"><a class="logo" href="index.html"><img class="logo__img col-lg-12" src="img/logoedit_ .png" alt="logo"/></a></div>
 						<div class="col-6 col-lg-8 d-flex justify-content-end">
 							<!-- main menu start-->
 							<ul class="main-menu">
@@ -313,6 +313,9 @@
 				</div> -->
 			</header>
 			<!-- header end-->
+
+
+
 			<main class="main">
 				<!-- promo start-->
 				<section class="promo">
@@ -327,12 +330,12 @@
 										<div class="align-container">
 											<div class="align-container__item">
 												<div class="promo-slider__wrapper-1">
-													<h2 class="promo-slider__title"><span>The Greatest Zoo</span><br/><span>in the World</span></h2>
+													<h2 class="promo-slider__title"><span>Bangladesh <br> National  Zoo</span><br/><span>Welcome</span></h2>
 												</div>
 												<div class="promo-slider__wrapper-2">
 													<p class="promo-slider__subtitle">Animals World accreditation standards. Members are proactive in both undertaking and applying animal welfare scientific research, contributing</p>
 												</div>
-												<div class="promo-slider__wrapper-3"><a class="button promo-slider__button button--primary" href="#">Discover</a></div>
+												<div class="promo-slider__wrapper-3"><a class="button promo-slider__button button--primary" href="../Zoo_Management_DBMS_project/tickets.html"><span>Buy Tickets</span> </a></div>
 											</div>
 										</div>
 									</div>
@@ -387,25 +390,25 @@
 					</div>
 					<!-- promo pannel start-->
 					<div class="promo-pannel">
-						<div class="promo-pannel__details">
+						<!-- <div class="promo-pannel__details">
 							<h6 class="promo-pannel__title">Contact Information</h6>
 							<p><strong>Location:</strong> av. Washington 165, NY CA 54003</p>
 							<p><strong>Phone:</strong> <a class="promo-pannel__link" href="tel:+31859644725">+31 85 964 47 25</a> <a class="promo-pannel__link" href="tel:+31859644725">+31 65 792 63 11</a></p>
 							<p><strong>Openning hours:</strong> 9:00 AM - 5:00 PM</p>
-						</div><a class="video-trigger" href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"><img class="img--bg" src="img/video-block.jpg" alt="image"/><span class="video-trigger__icon"><span>Live Cam</span><i class="fa fa-play" aria-hidden="true"></i></span></a>
+						</div><a class="video-trigger" href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"><img class="img--bg" src="img/video-block.jpg" alt="image"/><span class="video-trigger__icon"><span>Live Cam</span><i class="fa fa-play" aria-hidden="true"></i></span></a> -->
 					</div>
 					<!-- promo pannel end-->
 				</section>
 				<!-- promo end-->
 				<!-- section start-->
-				<section class="section about-front no-padding-bottom" id="about"><img class="about-front__bg t50 r0" src="img/about_bg.png" alt="img"/>
+				<section class="section about-front no-padding-bottom " id="about"><img class="about-front__bg t50 r0" src="img/about_bg.png" alt="img"/>
 					<div class="container">
 						<div class="row flex-column-reverse flex-lg-row">
 							<div class="col-lg-6 col-xl-5">
 								<div class="info-box">
 									<div class="info-box__inner"><img class="img--bg" src="img/about-us.jpg" alt="img"/>
-										<div class="heading heading--primary"><span class="heading__pre-title">Donation</span>
-											<h2 class="heading__title color--white"><span>Help us more</span><br/> <span>protect animals</span> </h2>
+										<div class="heading heading--primary"><span class="heading__pre-title">history</span>
+											<h2 class="heading__title color--white"><span>Explore </span><br/> <span>The diversity</span> </h2>
 										</div>
 										<p>Tigers once roamed the entire continent of Asia, but with human expansion they have lost over 96% of their original range. They now survive in small, isolated pockets of forest, where they are vulnerable to poaching and inbreeding. Allof the tiger subspecies have been have been classified as either by the Endangered or Critically Endangered by the IUCN (International Union for Conservation of Nature).  Poaching, habitat loss and habitat degradation are causing global tiger populations to plummet.  Today, less than 4,000 tigers remain worldwide.</p><a class="info-box__link" href="volunteer.html">Donate!</a>
 									</div>
@@ -413,7 +416,7 @@
 							</div>
 							<div class="col-lg-6 col-xl-6 offset-xl-1">
 								<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">About ZOO</span>
-									<h2 class="heading__title"><span>Words about</span><br/> <span>Animal World Zoo</span></h2>
+									<h2 class="heading__title"><span>Bangladesh National zoo</span><br/> <span>first zoo of the country</span></h2>
 								</div>
 								<p><strong>Ghost pipefish yellow bass New Zealand sand diver eulachon brook lamprey driftfish, Atlantic trout. Mudfish: blue eye, arrowtooth eel french angelfish yellowfin pike unicorn fish.</strong></p>
 								<p class="bottom-50">Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish. Fangtooth yellowtail banded killifish seamoth triplefin blenny     </p>
@@ -437,10 +440,10 @@
 				</section>
 				<!-- section end-->
 				<!-- section start-->
-				<section class="section no-padding-bottom">
+				<section class="section no-padding-bottom home-animals">
 					<div class="container">
-						<div class="row align-items-end bottom-70">
-							<div class="col-xl-7">
+						<div class="row align-items-end bottom-70 ">
+							<div class="col-xl-7 ">
 								<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">Our animals</span>
 									<h2 class="heading__title"><span>Awesome AnimalS in</span> <span>our Zoo</span></h2>
 									<p>Rudderfish long-finned pike--razorfish menhaden paradise fish, barramundi oceanic flyingfish. Fangtooth yellowtail banded killifish seamoth triplefin blenny desert pupfish crocodile shark catfish cutlassfish broadband dogfish whalefish.                 </p>
@@ -476,42 +479,42 @@
 							</div>
 						</div>
 						<div class="row offset-30">
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--orange color--primary" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center card-first" href="#">
 								<div class="animal-item__icon color--primary">
 									<svg class="icon">
 										<use xlink:href="#spider"></use>
 									</svg>
 								</div>
 								<h6 class="animal-item__title">Invertebrates</h6></a></div>
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--gray color--primary" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center  color--primary card-second" href="#">
 								<div class="animal-item__icon">
 									<svg class="icon">
 										<use xlink:href="#bull"></use>
 									</svg>
 								</div>
 								<h6 class="animal-item__title">Bulls</h6></a></div>
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--dark color--white" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--dark color--white card-third" href="#">
 								<div class="animal-item__icon">
 									<svg class="icon">
 										<use xlink:href="#giraffe"></use>
 									</svg>
 								</div>
 								<h6 class="animal-item__title">Girafes</h6></a></div>
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--orange color--primary" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--orange color--primary card-fourth" href="#">
 								<div class="animal-item__icon">
 									<svg class="icon">
 										<use xlink:href="#elep"></use>
 									</svg>
 								</div>
 								<h6 class="animal-item__title">Mammals</h6></a></div>
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--gray color--primary" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center  color--primary card-fifth" href="#">
 								<div class="animal-item__icon">
 									<svg class="icon">
 										<use xlink:href="#bird"></use>
 									</svg>
 								</div>
 								<h6 class="animal-item__title">Birds</h6></a></div>
-							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--dark color--white" href="#">
+							<div class="col-sm-6 col-md-4 col-xl-2"><a class="animal-item text-center background--dark color--white card-sixth" href="#">
 								<div class="animal-item__icon">
 									<svg class="icon">
 										<use xlink:href="#fish"></use>
@@ -569,14 +572,13 @@
 								<div class="nearest-item">
 									<div class="row align-items-center">
 										<div class="col-md-4">
-											<div class="nearest-item__img"><img class="img--bg" src="/img/2016_03_29_1814_1459252095._large.jpg" alt="img"/></div>
+											<div class="nearest-item__img"><img class="img--bg img-fluid" src="../Zoo_Management_DBMS_project/img/download.png" alt="img"/></div>
 										</div>
 										<div class="col-md-5">
-											<div class="nearest-item__description"><a class="nearest-item__link" href="#">Electronic
-												Library</a><span class="nearest-item__category"> </span></div>
+											<div class="nearest-item__description"><a class="nearest-item__link" href="#">World Animal Day</a><span class="nearest-item__category"> </span></div>
 										</div>
 										<div class="col-md-3">
-											<div class="nearest-item__date"><span>11 - 10 PM</span><span>10 November</span></div>
+											<div class="nearest-item__date"><span>11 - 10 PM</span><span>4 October </span></div>
 										</div>
 									</div>
 								</div>
@@ -609,7 +611,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="main-event"><img class="img--bg" src="/img/cow-1715829__480.jpg" alt="img"/>
+					<div class="main-event"><img class="img--bg img-fluid cow" src="../Zoo_Management_DBMS_project/img/cow.svg" alt="img"/>
 						<div class="main-event__inner">
 							<div class="heading heading--primary heading--style-2"><span class="heading__pre-title">Main Event</span>
 								<h2 class="heading__title"><span>Cow Appreciation Day</span><br/> <span>in our Zoo</span></h2>
@@ -622,8 +624,8 @@
 				<!-- front events end-->
 				<!-- section start-->
 				<section class="section"><img class="section__bg t50 r0" src="img/testimonials_bg.png" alt="bg"/>
-					<div class="testimonials testimonials--style-1">
-						<div class="container">
+					<!-- <div class="testimonials testimonials--style-1"> -->
+						<!-- <div class="container">
 							<div class="row">
 								<div class="col-lg-3 d-none d-lg-block">
 									<div class="testimonials__img"><img class="img--bg" src="img/man.jpg" alt="img"/></div>
@@ -669,7 +671,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</section>
 				<!-- section end-->
 				<!-- section start-->
@@ -682,7 +684,7 @@
 										<div class="align-container__item">
 											<div class="heading heading--primary">
 												<h2 class="heading__title no-margin-bottom"><span>Map of Animals world</span> <span>Zoo</span></h2>
-											</div><a class="button button--primary" href="#">See map</a>
+											</div><a class="button " href="#">See map</a>
 										</div>
 									</div>
 								</div>
@@ -697,18 +699,18 @@
 						<div class="row bottom-50">
 							<div class="col-12">
 								<div class="heading heading--primary heading--center"><span class="heading__pre-title">Our partners</span>
-									<h2 class="heading__title no-margin-bottom"><span>People Who</span> <span>Trust Us</span></h2>
+									<h2 class="heading__title no-margin-bottom"><span>People Who</span> <span>support Us</span></h2>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-12">
 								<div class="logos-slider">
-									<div class="logos-slider__item"><img src="img/logo_1.png" alt="logo"/></div>
-									<div class="logos-slider__item"><img src="img/logo_2.png" alt="logo"/></div>
-									<div class="logos-slider__item"><img src="img/logo_3.png" alt="logo"/></div>
-									<div class="logos-slider__item"><img src="img/logo_4.png" alt="logo"/></div>
-									<div class="logos-slider__item"><img src="img/logo_5.png" alt="logo"/></div>
+									<div class="logos-slider__item"><img class="img-fluid" src="img/org1.png" alt="logo"/></div>
+									<div class="logos-slider__item"><img src="img/org2.jpg" alt="logo"/></div>
+									<div class="logos-slider__item"><img src="img/org3.webp" alt="logo"/></div>
+									<div class="logos-slider__item"><img src="img/org4.svg" alt="logo"/></div>
+									<div class="logos-slider__item"><img src="img/org5.png" alt="logo"/></div>
 								</div>
 								<div class="logos-slider__dots"></div>
 							</div>
@@ -717,7 +719,7 @@
 				</section>
 				<!-- section end-->
 				<!-- section start-->
-				<section class="section no-padding-top no-padding-bottom">
+				<!-- <section class="section no-padding-top no-padding-bottom">
 					<div class="row no-gutters">
 						<div class="col-lg-6"><a class="action-block" href="#">
 							<div class="action-block__inner"><img class="img--bg" src="img/action-block_1.jpg" alt="img"/>
@@ -728,16 +730,17 @@
 								<h3 class="action-block__title"><span>Amazing Terrarium</span><br/> <span>in Europe</span></h3>
 							</div></a></div>
 					</div>
-				</section>
+				</section> -->
 				<!-- section end-->
 			</main>
 			<!-- footer start-->
-			<footer class="footer"><img class="footer__bg img--bg" src="img/background__layout.png" alt="bg"/>
+			<footer class="footer">
+				<!-- <img class="footer__bg img--bg" src="img/background__layout.png" alt="bg"/> -->
 				<div class="container">
 					<div class="row bottom-50">
-						<div class="col-md-5 col-xl-4 text-center text-md-left"><a class="logo logo--footer" href="index.html"><img class="logo__img" src="img/logo_zoo_white.png" alt="logo"/></a>
+						<div class="col-md-5 col-xl-4 text-center text-md-left"><a class="logo logo--footer" href="index.html"><img class="logo__img img-fluid" src="img/logoedit_ .png" alt="logo"/></a>
 							<div class="footer__details">
-								<p><strong>Location:</strong> <span>av. Washington 165, NY CA 54003</span></p>
+								<p><strong>Location:</strong> <span>Bangladesh National Zoo, Mirpur 2, Dhaka</span></p>
 								<p><strong>Phone:</strong> <a href="tel:+31859644725">+31 85 964 47 25</a> <a href="tel:+31859644725">+31 65 792 63 11</a></p>
 								<p><strong>Email:</strong> <a href="mailto:info@animalsworld.com">info@animalsworld.com</a></p>
 								<p><strong>Openning hours:</strong> <span>9:00 AM - 5:00 PM</span></p>
@@ -750,8 +753,8 @@
 							</ul>
 						</div>
 						<div class="col-md-7 col-xl-5 d-none d-md-block">
-							<h6 class="footer__title">Menu & Links</h6>
-							<ul class="footer-menu">
+							<!-- <h6 class="footer__title">Menu & Links</h6> -->
+							<!-- <ul class="footer-menu">
 								<li class="footer-menu__item"><a class="footer-menu__link" href="#">Home</a></li>
 								<li class="footer-menu__item"><a class="footer-menu__link" href="#">Membership </a></li>
 								<li class="footer-menu__item"><a class="footer-menu__link" href="#">Pages</a></li>
@@ -775,7 +778,7 @@
 								<li class="footer-submenu__item"><a class="footer-submenu__link" href="#">Terra Park</a></li>
 								<li class="footer-submenu__item"><a class="footer-submenu__link" href="#">Cooperation</a></li>
 								<li class="footer-submenu__item"><a class="footer-submenu__link" href="#">Libriry</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="col-lg-3 d-none d-xl-block">
 							<h6 class="footer__title"><span>Instagram</span> <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -793,7 +796,7 @@
 						<div class="col-sm-6 text-center text-sm-left">
 							<div class="footer-privacy"><a class="footer-privacy__link" href="#">Privacy Policy</a><span class="footer-privacy__divider">|</span><a class="footer-privacy__link" href="#">Term and Condision</a></div>
 						</div>
-						<div class="col-sm-6 text-center text-sm-right"><a class="footer__link" href="#"><img src="img/footer-logo.png" alt="logo"/></a></div>
+						<div class="col-sm-6 text-center text-sm-right"><a class="footer__link" href="#"><img src="img/logo.jpeg" alt="logo"/></a></div>
 					</div>
 				</div>
 			</footer>
