service page add

--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
               <span>VISIT</span
               ><span>
                 <svg class="icon">
-                  <use xlink:href="#chevron"></use></svg
-              ></span>
+                  <use xlink:href="#chevron"></use></svg>
+               </span>
             </div>
             <div class="screen__item screen--trigger" data-category="pages">
               <span>THINGS TO DO</span
               ><span>
                 <svg class="icon">
-                  <use xlink:href="#chevron"></use></svg
-              ></span>
+                  <use xlink:href="#chevron"></use></svg>
+               </span>
             </div>
             <div class="screen__item">
               <a class="screen__link" href="blog.html">LEARN AND RESEARCH</a>
             </div>
             <div class="screen__item screen--trigger" data-category="shop">
-              <span>ANIMAL</span
-              ><span>
+              <span>ANIMAL</span>
+                <span>
                 <svg class="icon">
-                  <use xlink:href="#chevron"></use></svg
-              ></span>
+                  <use xlink:href="#chevron"></use></svg>
+               </span>
             </div>
             <div class="screen__item">
               <a class="screen__link" href="contacts.html">MUSEUM</a>
@@ -78,15 +78,15 @@
               <span>ABOUT</span
               ><span>
                 <svg class="icon">
-                  <use xlink:href="#chevron"></use></svg
-              ></span>
+                  <use xlink:href="#chevron"></use></svg>
+               </span>
             </div>
             <div class="screen__item screen--trigger" data-category="language">
               <span>SUPPORT US</span
               ><span>
                 <svg class="icon">
-                  <use xlink:href="#chevron"></use></svg
-              ></span>
+                  <use xlink:href="#chevron"></use></svg>
+               </span>
             </div>
             <ul class="screen__socials">
               <li>
@@ -469,7 +469,7 @@
                   <!-- sub menu end-->
                 </li>
                 <li class="main-menu__item">
-                  <a class="main-menu__link" href="blog.html"
+                  <a class="main-menu__link" href="services.html"
                     ><span>Services</span></a
                   >
                 </li>
@@ -588,8 +588,8 @@
           <div class="promo-slider">
             <div class="promo-slider__item promo-slider__item--style-2">
               <picture>
-                <source srcset="img/promo_1.jpg" media="(min-width: 992px)" />
-                <img class="img--bg" src="img/promo_1.jpg" alt="img" />
+                <source srcset="img/promo/promo_1.jpg" media="(min-width: 992px)" />
+                <img class="img--bg" src="img/promo/promo_1.jpg" alt="img" />
               </picture>
               <div class="container">
                 <div class="row">
@@ -626,8 +626,8 @@
             </div>
             <div class="promo-slider__item promo-slider__item--style-2">
               <picture>
-                <source srcset="img/promo_2.jpg" media="(min-width: 992px)" />
-                <img class="img--bg" src="img/promo_2.jpg" alt="img" />
+                <source srcset="img/promo/promo_2.jpg" media="(min-width: 992px)" />
+                <img class="img--bg" src="img/promo/promo_2.jpg" alt="img" />
               </picture>
               <div class="container">
                 <div class="row">
@@ -662,8 +662,8 @@
             </div>
             <div class="promo-slider__item promo-slider__item--style-3">
               <picture>
-                <source srcset="img/promo_3.jpg" media="(min-width: 992px)" />
-                <img class="img--bg" src="img/promo_3.jpg" alt="img" />
+                <source srcset="img/promo/promo_3.jpg" media="(min-width: 992px)" />
+                <img class="img--bg" src="img/promo/promo_3.jpg" alt="img" />
               </picture>
               <div class="container">
                 <div class="row">
@@ -721,17 +721,8 @@
                       </h2>
                     </div>
                     <p>
-                      Tigers once roamed the entire continent of Asia, but with
-                      human expansion they have lost over 96% of their original
-                      range. They now survive in small, isolated pockets of
-                      forest, where they are vulnerable to poaching and
-                      inbreeding. Allof the tiger subspecies have been have been
-                      classified as either by the Endangered or Critically
-                      Endangered by the IUCN (International Union for
-                      Conservation of Nature). Poaching, habitat loss and
-                      habitat degradation are causing global tiger populations
-                      to plummet. Today, less than 4,000 tigers remain
-                      worldwide.
+                       Today, less than 4,000 tigers remain
+                      worldwide.Save tigers!
                     </p>
                     <a class="info-box__link" href="volunteer.html">Donate!</a>
                   </div>
@@ -1063,7 +1054,7 @@
                       <div class="nearest-item__img">
                         <img
                           class="img--bg img-fluid"
-                          src="../Zoo_Management_DBMS_project/img/download.png"
+                          src="/img/events/event-1.png"
                           alt="img"
                         />
                       </div>
@@ -1088,7 +1079,7 @@
                       <div class="nearest-item__img">
                         <img
                           class="img--bg"
-                          src="img/child-GIRRAFF.jpg"
+                          src="/img/events/event-2.jpg"
                           alt="img"
                         />
                       </div>
@@ -1111,7 +1102,7 @@
                   <div class="row align-items-center">
                     <div class="col-md-4">
                       <div class="nearest-item__img">
-                        <img class="img--bg" src="IMG/MAGIC.jpg" alt="img" />
+                        <img class="img--bg" src="/img/events/event-3.jpg" alt="img" />
                       </div>
                     </div>
                     <div class="col-md-5">
@@ -1138,7 +1129,7 @@
           <div class="main-event">
             <img
               class="img--bg img-fluid cow"
-              src="../Zoo_Management_DBMS_project/img/cow.svg"
+              src="/img/cow-1715829__480.jpg"
               alt="img"
             />
             <div class="main-event__inner">
@@ -1263,19 +1254,19 @@
               <div class="col-12">
                 <div class="logos-slider">
                   <div class="logos-slider__item">
-                    <img class="img-fluid" src="img/org1.png" alt="logo" />
+                    <img class="img-fluid" src="img/logo/org1.png" alt="logo" />
                   </div>
                   <div class="logos-slider__item">
-                    <img src="img/org2.jpg" alt="logo" />
+                    <img src="img/logo/org2.jpg" alt="logo" />
                   </div>
                   <div class="logos-slider__item">
-                    <img src="img/org3.webp" alt="logo" />
+                    <img src="img/logo/org3.webp" alt="logo" />
                   </div>
                   <div class="logos-slider__item">
                     <img src="img/org4.svg" alt="logo" />
                   </div>
                   <div class="logos-slider__item">
-                    <img src="img/org5.png" alt="logo" />
+                    <img src="img/logo/org5.png" alt="logo" />
                   </div>
                 </div>
                 <div class="logos-slider__dots"></div>
