--- a/login/img/login-form-05/index.html
+++ b/login/img/login-form-05/index.html
@@ -24,7 +24,7 @@
   
       
   <div class="d-md-flex half">
-    <div class="bg" style="background-image: url('/img/login-form-05/images/about-us.jpg');"></div>
+    <div class="bg" style="background-image: url('/img/about-us.jpg');"></div>
     <div class="contents">
 
       <div class="container">
