index file updated, header and footer marked

--- a/index.html
+++ b/index.html
@@ -340,9 +340,15 @@
           </div>
         </div>
       </div>
+
+
       <!-- menu dropdown end-->
-      <!-- header start-->
+
+
+      <!-- header start-->      <!-- header start-->      <!-- header start-->      <!-- header start-->
       <header class="header header-common">
+
+
         <!-- navigation bar start  -->
         <div class="header__top">
           <div class="row align-items-center">
@@ -576,11 +582,18 @@
 						</div>
 					</div>
 				</div> -->
+
       </header>
 
-      <!-- navigation bar ended  -->
 
-      <!-- header end-->
+
+      <!-- navigation bar ended  -->      <!-- navigation bar ended  -->      <!-- navigation bar ended  -->    
+
+
+
+      <!-- header end-->         <!-- header end-->         <!-- header end-->         <!-- header end-->        
+
+
 
       <main class="main">
         <!-- promo start-->
@@ -749,7 +762,7 @@
                   barramundi oceanic flyingfish. Fangtooth yellowtail banded
                   killifish seamoth triplefin blenny
                 </p>
-                <div class="row offset-30">
+                <!-- <div class="row offset-30">
                   <div class="col-6 col-sm-3">
                     <div class="brand-item bottom-30">
                       <img
@@ -786,7 +799,7 @@
                       />
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <a class="button button--primary top-50" href="#">More about</a>
               </div>
             </div>
@@ -1290,7 +1303,9 @@
 				</section> -->
         <!-- section end-->
       </main>
-      <!-- footer start-->
+
+      <!-- footer start-->      <!-- footer start-->      <!-- footer start-->      <!-- footer start-->
+
       <footer class="footer">
         <!-- <img class="footer__bg img--bg" src="img/background__layout.png" alt="bg"/> -->
         <div class="container">
@@ -1438,7 +1453,7 @@
           </div>
         </div>
       </footer>
-      <!-- footer end-->
+      <!-- footer end-->      <!-- footer end-->      <!-- footer end-->      <!-- footer end-->      <!-- footer end-->
     </div>
     <!-- libs-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
